[package]
name = "wvm-lassie"
version = "0.1.0"
edition = "2021"

[dependencies]
lassie = "0.9.0"
ureq = "2.9.7"
axum = "0.7.5"
shuttle-axum = "0.50.0"
shuttle-runtime = "0.50.0"
tokio = { version = "1.40.0", features = ["full"] }
anyhow = "1.0.95"
serde = "1.0.217"
serde_json = "1.0.138"
bundler = { git = "https://github.com/weaveVM/bundler", branch = "main"}
dotenv = "0.15.0"
iroh-car = "0.5.1"
reqwest = "0.12.12"

